--- a/newreacttest/src/backend/package.json
+++ b/newreacttest/src/backend/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.3.2"
+    "mongoose": "^8.3.2",
+    "socket.io": "^4.7.5",
+    "ws": "^8.17.0"
   }
 }
